# rag-qa-system

./: README.md
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c34b34d9acb0_init.py
backend/app/: check.py  main.py
backend/app/api/: lessons.py  query.py  upload.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/models/: document.py  query.py
backend/app/scripts/: dbinit.sh  dbinit.sql
backend/app/services/: document_service.py  query_service.py
backend/app/utils/: chunker.py  pdf_extractor.py
backend/app/vectorstore/: docarray_client.py
frontend/: biome.json  netlify.toml  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
frontend/src/: entry.client.tsx  root.tsx  routes.ts
frontend/src/components/features/: chat-box.tsx  upload-box.tsx
frontend/src/lib/pages/home/: index.tsx
frontend/src/lib/pages/home/components/: cta-section.tsx
