[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "kammiii",email = "kamran.nazir2504@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pypdf (>=5.8.0,<6.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "openai (>=1.97.1,<2.0.0)",
    "docarray (>=0.41.0,<0.42.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"
alembic = "^1.16.4"
psycopg2-binary = "^2.9.10"

